force-app/main/default/objects/ProgramEnrollment/fields/JRNY_Court_Order__c.field-meta.xml
<CustomField>
    <fullName>JRNY_Court_Order__c</fullName>
    <label>Court Order</label>
    <type>Lookup</type>
    <referenceTo>JRNY_Court_Order__c</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Court Order that mandated this enrollment, if applicable.</description>
</CustomField>