force-app/main/default/objects/ProgramEnrollment/fields/JRNY_Enrollment_Source__c.field-meta.xml
<CustomField>
    <fullName>JRNY_Enrollment_Source__c</fullName>
    <label>Enrollment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Court-Mandated</fullName>
            </value>
            <value>
                <fullName>Self-Referred</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Staff-Referred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>