force-app/main/default/objects/ProgramEnrollment/fields/JRNY_Offsite_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>JRNY_Offsite_Approved_By__c</fullName>
    <label>Off-Site Approved By</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Off-Site Approvals</relationshipLabel>
    <relationshipName>Offsite_Approvals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The probation officer (or other authority) who approved off-site residency, if applicable.</description>
</CustomField>