force-app/main/default/objects/ProgramEnrollment/fields/JRNY_Offsite_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>JRNY_Offsite_Approved_Date__c</fullName>
    <label>Off-Site Approved Date</label>
    <type>Date</type>
</CustomField>