force-app/main/default/objects/ProgramEnrollment/fields/JRNY_Residency_Status__c.field-meta.xml
<CustomField>
    <fullName>JRNY_Residency_Status__c</fullName>
    <label>Residency Status</label>
    <type>Picklist</type>
    <description>Only meaningful for live-in facility enrollments.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Approved Off-Site</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>