force-app/main/default/objects/ProgramEnrollment/listViews/Completed_Peers.listView-meta.xml
<ListView>
    <fullName>Completed_Peers</fullName>
    <label>Completed Peers</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
</ListView>