force-app/main/default/objects/ProgramEnrollment/listViews/Court_Mandated_Residents.listView-meta.xml
<ListView>
    <fullName>Court_Mandated_Residents</fullName>
    <label>Court-Mandated Residents</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JRNY_Enrollment_Source__c</field>
        <operation>equals</operation>
        <value>Court-Mandated</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
</ListView>